# RAGBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
Chatbot/Data/: embedding_based_retriever.py  keyword_match_retriever.py
Chatbot/Utils/: validation.py
SimpplrChatbot/: .env.example  asgi.py  evaluater.py  export_env.sh
SimpplrChatbot/API/: app.py  settings.py
SimpplrChatbot/Data/: document_loader.py  embedding_based_retriever.py  keyword_match_retriever.py  knowledge_graph_retriever.py  query_helper.py
SimpplrChatbot/Utils/: utils.py  validation.py
