[tool.poetry]
name = "simpplr-chatbot"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
elasticsearch = "^8.15.1"
langchain-experimental = "^0.3.2"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.2"
langchain = "^0.3.3"
llama-index = "^0.11.17"
pypdf = "^4.0.1"  # Changed from ^5.0.1 to ^4.0.1
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
deepeval = "^1.3.7"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
